src/App.css
/* Base */
*, *::after, *::before {
    margin: 0; 
    padding: 0;
    box-sizing: border-box;
    /* border: 1px solid red; */
}

:root {
    width: 100dvw; 
    display: flex; 
    place-content: center;
}

/* Variables */
:root, * {
    --clr-secondary-50: #D3DAF9; 
    --clr-secondary-60: #ABB4DD; 
    --clr-secondary-70: #707DBF; 
    --clr-secondary-90: #5562A2; 
    --clr-secondary-100: #37437D; 
    --clr-secondary-110: #1C2346; 

    --clr-primary-30: #FDEDFE;
    --clr-primary-40: #FCE2FE;
    --clr-primary-50: #FCD3FE;
    --clr-primary-90: #F589FA;
    --clr-primary-100: #F26CF9;
    --clr-primary-150: #f200ff;

    --clr-yellow-90: #FFEFC3;
    --clr-yellow-100: #FFCA39;

    --clr-grey-10: #FFFFFF;
    --clr-grey-20: #F7F7F7;
    --clr-grey-30: #EDEDED;
    --clr-grey-40: #E0E0E1;
    --clr-grey-50: #C3C3C4;
    --clr-grey-60: #9F9FA1;
    --clr-grey-70: #777779;
    --clr-grey-80: #636365;
    --clr-grey-90: #434345;
    --clr-grey-100: #1E1E20;

    --clr-cool-grey-10: #EEEFFF; 
    --clr-cool-grey-20: #E4E5F5; 
    --clr-cool-grey-30: #DDDEED; 
    --clr-cool-grey-40: #D1D2E0; 
    --clr-cool-grey-50: #B0B1BD; 
    --clr-cool-grey-60: #8F8F99; 
    --clr-cool-grey-70: #72737A; 
    --clr-cool-grey-80: #56565C; 
    --clr-cool-grey-90: #39393D; 
    --clr-cool-grey-100: #131314; 

}

/* Typography */
body {
    font-family: 'Inter', sans-serif; 
    font-size: 12px; 
    font-weight: 400; 
    color: var(--clr-grey-100); 
}

h1 {
    font-size: 32px; 
}

h2 {
    font-size: 28px; 
}

h3 {
    font-size: 26px; 
}

h4 {
    font-size: 24px; 
}

h5 {
    font-size: 22px; 
}

h6 {
    font-size: 20px; 
}

.title-text {
    line-height: 1.2;
}

.body-text {
    line-height: 1.24; 
}

.btn-text {
    line-height: 1; 
}

.bold {
    font-weight: 700; 
}

.semi-bold {
    font-weight: 600; 
}

.medium {
    font-weight: 500; 
}

.light {
    font-weight: 300; 
}

/* Layouts */
.center-wrapper {
    height: 100vh;
    width: 100vw;
    overflow: hidden; 
    display: flex; 
    flex-direction: column;
    justify-content: space-between; 
    align-items: center;
    background-image: url(../public/images/pexels-joshsorenson-154147.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 35%;

    .photo-byline {
    place-self: end;
    padding: 1rem; 
    color: var(--clr-primary-30);
}
    
    @media (min-width: 768px) {
        background-position: 25%;
    }

    @media (min-width: 1200px) {
        background-position: 0;
    } 
}

.grid-wrapper {
    height: 100dvh;
    width: 100dvw;
    display: grid; 
    grid-template-rows: auto 1fr auto;
    grid-template-columns: 1fr;
    gap: 1rem; 
    padding: 1rem; 
    

    @media (min-width: 768px) {
        grid-template-columns: 72px 1fr; 
        grid-template-areas:    "nav header"
                                "nav main"
                                "nav footer";
    }

    @media (min-width: 1200px) {
        grid-template-columns: 1fr 4fr; 
        max-width: 1140px;
    } 
}

.open-wrapper {
    height: 100dvh;
    width: 100dvw;
    display: grid; 
    grid-template-rows: auto 1fr auto;
    gap: 1rem; 
    padding: 1rem; 
}

.key {
    font-size: 16px; 
}

.open-header {
    display: flex; 
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: var(--clr-grey-20); 
    padding: 1rem; 
    position: relative;
    border-radius: 16px; 
}



.open-footer {
    display: flex; 
    flex-direction: column; 
    align-items: center;
    justify-content: center; 
    background-color: var(--clr-grey-20);
    padding: 1rem; 
    border-radius: 16px;
    gap: .2rem;

    p {
        text-align: center;
    }

    @media (min-width: 768px) {
        max-height: 3rem;
        flex-direction: row;
    }
}

.center-div {
    display: flex; 
    flex-direction: row;
    align-items: center; 
    justify-content: center; 
    gap: 1rem; 
}


/* Buttons */
.btn {
    display: flex; 
    flex-direction: row; 
    align-items: center; 
    justify-content: center; 
    gap: .2rem; 
    border-radius: 30;
    border: none; 
    background-color: transparent; 
    cursor: pointer;
}

.btn-round {
    border-radius: 50%;
    aspect-ratio: 1;
    border: none; 
    background-color: transparent; 
    cursor: pointer;
}

.btn-round-small {
    font-size: 10px; 
    padding: 6px; 
}

.btn-round-medium {
    font-size: 12px; 
    padding: 7px; 
}

.btn-round-large {
    font-size: 14px; 
    padding: 9px; 
}

.btn-round-xl {
    font-size: 16px; 
    padding: 10px; 
}

.btn-small {
    font-size: 10px; 
    padding: 6px, 10px; 
}

.btn-medium {
    font-size: 12px; 
    padding: 8px, 14px; 
}

.btn-large {
    font-size: 14px; 
    padding: 10px, 16px; 
}

.btn-pink {
    background-color: var(--clr-primary-100);
    color: var(--clr-grey-10);

    &:hover,
    &:active {
        background-color: var(--clr-primary-90);
        color: var(--clr-grey-20);
    }
}

.btn-grey {
    background-color: var(--clr-cool-grey-20);
    color: var(--clr-secondary-100);
    
    &:hover,
    &:active {
        background-color: var(--clr-cool-grey-20);
    }
}

.btn-blue {
    background-color: var(--clr-secondary-100);
    color: var(--clr-grey-10);
    
    &:hover,
    &:active {
        background-color: var(--clr-secondary-90);
    }
}

.btn-border {
    background-color: transparent;
    color: var(--clr-grey-90);
    border: 1px solid var(--clr-grey-30); 

    &:hover,
    &:active {
        color: var(--clr-grey-100);
        border: 1px solid var(--clr-grey-50); 
    }
}

.btn-no-border {
    color: var(--clr-grey-90);

    &:hover,
    &:active {
        background-color: var(--clr-grey-30);
        color: var(--clr-grey-100);
    }
}

.btn-signout {
    width: 100%;
}
/* ... */

